--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="col-md-6">
                     <div class="home-content">
                         <h3>Hi,</h3>
-                        <h3>I'm Paolo</h3>
+                        <h3>I'm Paolo Cordolla</h3>
                         <h3>And I'm a <span id="multiple-text" class="text-primary"></span></h3> 
                         <h6>Welcome to my world, The life of a Programmer</h6>
                     </div>
